--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=szhura
 jwt.secret=ukrainer
+#MailSender
+mail.host=smtp.gmail.com
+mail.protocol=smtp
+mail.username=iamquel08@gmail.com
+mail.password=*******
